# newspaper-title-fine-tuning

./: README.md  pyproject.toml
models/best_model_20240108-192025/: README.md  config.json  model_head.pkl  testset_sample.txt  tokenizer_config.json
newspaper-title-fine-tuning/: 01_titlecleaner.py  02_finetune-hannes.py  02_finetune.py  03_predict.py
